tests/snapshots/run_wpt_conformance__litert_dequantizeLinear_int8_0D_constant_tensor_with_float32_0D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear int8 0D constant tensor with float32 0D scale",
    "litert",
    "PASS",
)
