tests/snapshots/run_wpt_conformance__litert_dequantizeLinear_int8_4D_tensor_broadcasting_float16_4D_scale_and_int8_4D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int8 4D tensor broadcasting float16 4D scale and int8 4D zeroPoint, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: DequantizeLinear { input: 0, scale: 1, zero_point: Some(2), options: Some(MLOperatorOptions { label: "" }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i8[1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1, 1, 2, 1] @bytes([123, 52, 158, 68]);
    operand_2: i8[1, 1, 2, 1] @bytes([12, 12]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
