tests/snapshots/run_wpt_conformance__litert_dequantizeLinear_int8_4D_tensor_broadcasting_float32_4D_scale_and_int8_4D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear int8 4D tensor broadcasting float32 4D scale and int8 4D zeroPoint",
    "litert",
    "PASS",
)
