tests/snapshots/run_wpt_conformance__litert_dequantizeLinear_uint4_1D_tensor_of_odd_size_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint4 1D tensor of odd size with float32 1D scale, litert
 Failed to convert graph: Backend Litert does not support data type Uint4

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u4[3];
  }

  consts {
    operand_1: f32[1] @bytes([42, 101, 143, 63]);
    operand_2: u4[1] @bytes([2]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
