tests/snapshots/run_wpt_conformance__litert_dequantizeLinear_uint8_1D_constant_tensor_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "dequantizeLinear.https.any.js",
    "dequantizeLinear uint8 1D constant tensor with float32 1D scale",
    "litert",
    "PASS",
)
