tests/snapshots/run_wpt_conformance__litert_dequantizeLinear_with_float32_3D_scale_as_an_intermediate_node.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear with float32 3D scale as an intermediate node, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: DequantizeLinear { input: 4, scale: 1, zero_point: Some(2), options: Some(MLOperatorOptions { label: "" }), outputs: [5] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i32[2, 1];
  }

  consts {
    operand_1: f32[1, 1, 2] @bytes([42, 101, 143, 63, 43, 101, 143, 62]);
    operand_2: i32[1, 1, 2] @bytes([35, 0, 0, 0, 232, 255, 255, 255]);
  }

  nodes {
    [operand_3] = transpose(dequantizeLinearInput, label="", permutation=[1, 0]);
    [operand_4] = reshape(operand_3, label="");
    [dequantizeLinearOutput] = dequantizeLinear(operand_4, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
